# TheOtherComputerGraphics_Project1

./: .gitignore  CMakeLists.txt  CMakePresets.json  Project1_CMAKE.cpp  Project1_CMAKE.h  Structure.txt  vcpkg.json
ShaderPrograms/: Particle_fragement.frag  Particle_vertex.vert  Shader.vert  Trail_fragment.frag  Trail_vertex.vert  shader_picking_fragment.frag  shader_picking_vertex.vert  shader_worldObject_fragment.frag  shader_worldObject_vertex.vert
lib/: assimp-vc143-mtd.lib
objModels/Bot/: dleftleg.mtl
objModels/Gundam/: back.fbx  body.fbx  dbody.fbx  dlefthand.fbx  dleftleg.fbx  drighthand.fbx  drightleg.fbx  head.fbx  leftfoot.fbx  lefthand.fbx  lshouder.fbx  rightfoot.fbx  righthand.fbx  rshouder.fbx  ulefthand.fbx  uleftleg.fbx  urighthand.fbx  urightleg.fbx
objModels/Gundam_OriginRepositioned/: back.mtl  body.mtl  dbody.mtl  dlefthand.mtl  dleftleg.mtl  drighthand.mtl  drightleg.mtl  head.mtl  leftfoot.mtl  lefthand.mtl  lshouder.mtl  rightfoot.mtl  righthand.mtl  rshouder.mtl  ulefthand.mtl  uleftleg.mtl  urighthand.mtl  urightleg.mtl
objModels/PhotonBlade/: untitled.mtl
objModels/Train/: Train.mtl
objModels/anotherTrain/: BTTF Loco UV Mapping 3_6 Animated.mtl
src/: 1.ps1
src/App/: App.cpp  App.h
src/Camera/: Camera.h
src/Command/: CommandStack.h
src/Event/: EventBus.h
src/FrameBuffer/: Framebuffer.h
src/IK/: IKSolver.h
src/ImNeoSequencer/: imgui_neo_sequencer.cpp  imgui_neo_sequencer.h
src/Model/: MeshLoader.h  ModelLoader.cpp  ModelLoader.h
src/ParticleEffects/: ParticleRenderer.h  TrailRenderer.h
src/Scene/: MainScene.cpp  MainScene.h  SceneRender.cpp  SceneRenderer.h  Transform.h
src/Shader/: Shader.cpp  Shader.h
src/Window/: ControlWindow.cpp  CustomSlider.h
src/Window/HierarchyWindow/: HierarchyWindow.cpp  HierarchyWindow.h
src/Window/InspectorWindow/: InspectorWindow.cpp  InspectorWindow.h
src/Window/SequencerWindow/: SequencerWindow.cpp  SequencerWindow.h
src/Window/ViewportWindow/: ViewportWindow.cpp  ViewportWindow.h
